apps/linkwarden/service-linkwarden.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
